Fix touchable insets for Avatar/Cast toolbar icons

An earlier refactoring set zero-insets for touchable AvatarToolbarButton
instead of insets for TOOLBAR_BUTTON. This API was confusing to use so
SetLayoutInsets was changed and renamed to SetLayoutInsetDelta to make
it easier to use. Callers no longer need to include the call to
GetLayoutInsets(TOOLBAR_BUTTON).

CastToolbarButton having incorrect ink-drops was not a regression but
has always used a 16dp icon in both touchable and non-touchable modes.
This change also calls SetInsetDelta to make up for the missing 8dp.

Bug: chromium:895263
Change-Id: I30595913dfb8a19358d198d9f4e0dbcb37993117
Reviewed-on: https://chromium-review.googlesource.com/c/1281903
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599765}
Former-commit-id: 019423bf4be51d4547a2309741eb666a39a7b718